# packages

./: .gitignore  PKGBUILD.skel  README.txt  version.sh
.github/workflows/: add2project.yml
alarm-armv7h/: cve-check-tool-5.6.4.r301-1-armv7h.pkg.tar.xz  mega-cmd-1.1.0-1-armv7h.pkg.tar.xz  mega-sdk-3.3.2-1-armv7h.pkg.tar.xz  mega-sdk-3.3.3-1-armv7h.pkg.tar.xz  mega-sdk-3.3.7-1-armv7h.pkg.tar.xz  mega-sdk-3.5.4-1-armv7h.pkg.tar.xz  network-ups-tools-2.7.4.4497-1-armv7h.pkg.tar.xz  network-ups-tools-2.7.4.4498-1-armv7h.pkg.tar.xz  network-ups-tools-2.7.4.4499-1-armv7h.pkg.tar.xz  opipc.db  opipc.db.tar.xz  opipc.files  opipc.files.tar.xz  uboot-opipc-2017.11-2-armv7h.pkg.tar.xz  uboot-opipc-2018.03-1-armv7h.pkg.tar.xz  uboot-opipc-2019.10-1-armv7h.pkg.tar.xz  uboot-opipc-2020.01-1-armv7h.pkg.tar.xz
boot/: boot.scr
linux-armv7-lts/: PKGBUILD  linux-armv7-lts.install  linux-armv7.install  patch-4.9.59-armv7-x5.diff.xz
makepkg/arch-audit/: .nvchecker.toml  0001-Update-to-alpm-v3.patch  0002-update-quote.patch  PKGBUILD  pacman-7.patch
makepkg/chku/: PKGBUILD
makepkg/manjaro-zsh-config/: PKGBUILD
makepkg/mega-cmd/: PKGBUILD
makepkg/network-ups-tools/: PKGBUILD
makepkg/plex-media-server/: PKGBUILD
makepkg/plex-sub-zero/: PKGBUILD  subzero.tmpfiles
makepkg/sfeed/: PKGBUILD
makepkg/uboot-opipc/: PKGBUILD
makepkg/zsh-theme-powerlevel10k/: PKGBUILD
mega-sdk/: PKGBUILD
openports/copyq/: Makefile
openports/copyq/pkg/: PLIST
openports/dhcpcd-ui/: Makefile  distinfo
openports/dhcpcd-ui/patches/: patch-configure  patch-src_dhcpcd-curses_eloop_c
openports/dhcpcd-ui/pkg/: DESCR-common  DESCR-gtk2  DESCR-main  PLIST-common  PLIST-gtk2  PLIST-main
openports/efl/: Makefile  distinfo
openports/efl-clipboard/: Makefile  distinfo
openports/efl-clipboard/patches/: patch-meson_build  patch-src_meson_build
openports/efl-clipboard/pkg/: DESCR  PLIST
openports/efl/files/: libversion-fix.sh
openports/efl/patches/: patch-data_eo_meson_build  patch-src_edje_external_elementary_meson_build  patch-src_edje_external_emotion_meson_build  patch-src_lib_ecore_audio_ecore_audio_c  patch-src_lib_ecore_con_ecore_con_url_curl_c
openports/efl/pkg/: DESCR  PLIST
openports/enlightenment-wm/: Makefile  distinfo
openports/enlightenment-wm/patches/: patch-src_bin_e_intl_c  patch-src_bin_system_e_system_power_c  patch-src_modules_conf_intl_e_int_config_intl_c  patch-src_modules_wizard_page_010_c
openports/enlightenment-wm/pkg/: MESSAGE  PLIST  README  enlightenment.login
openports/megacmd/: Makefile  distinfo
openports/megacmd/pkg/: DESCR  PLIST  (+1 more)
openports/quassel/: Makefile
openports/sayonara/: Makefile  distinfo
openports/terminology/: Makefile  distinfo
pkgsrc/chromium/: .Makefile.kate-swp  Makefile  PLIST  TODO  distinfo  options.mk
pkgsrc/chromium/patches/: patch-BUILD.gn  patch-apps_ui_views_app__window__frame__view.cc  patch-ash_display_mirror__window__controller.cc  patch-base_BUILD.gn  patch-base_allocator_dispatcher_tls.h  patch-base_allocator_partition__allocator_partition__alloc.gni  patch-base_allocator_partition__allocator_src_partition__alloc_BUILD.gn  patch-base_allocator_partition__allocator_src_partition__alloc_address__space__randomization.h  patch-base_allocator_partition__allocator_src_partition__alloc_page__allocator.h  patch-base_allocator_partition__allocator_src_partition__alloc_page__allocator__constants.h  patch-base_allocator_partition__allocator_src_partition__alloc_page__allocator__internals__posix.h  patch-base_allocator_partition__allocator_src_partition__alloc_partition__address__space.cc  patch-base_allocator_partition__allocator_src_partition__alloc_partition__alloc__base_debug_stack__trace__posix.cc  patch-base_allocator_partition__allocator_src_partition__alloc_partition__alloc__base_rand__util__posix.cc  patch-base_allocator_partition__allocator_src_partition__alloc_partition__alloc__base_threading_platform__thread.h  patch-base_allocator_partition__allocator_src_partition__alloc_partition__alloc__base_threading_platform__thread__internal__posix.h  patch-base_allocator_partition__allocator_src_partition__alloc_partition__alloc__base_threading_platform__thread__posix.cc  patch-base_allocator_partition__allocator_src_partition__alloc_partition__alloc__config.h  patch-base_allocator_partition__allocator_src_partition__alloc_partition__alloc__constants.h  patch-base_allocator_partition__allocator_src_partition__alloc_partition__alloc__forward.h  patch-base_allocator_partition__allocator_src_partition__alloc_partition__page__constants.h  patch-base_allocator_partition__allocator_src_partition__alloc_partition__root.cc  patch-base_allocator_partition__allocator_src_partition__alloc_spinning__mutex.cc  patch-base_allocator_partition__allocator_src_partition__alloc_stack_stack.cc  patch-base_allocator_partition__allocator_src_partition__alloc_starscan_stack_stack.cc  patch-base_allocator_partition__allocator_src_partition__alloc_thread__isolation_pkey.cc  patch-base_atomicops.h  patch-base_base__paths__posix.cc  patch-base_base__switches.cc  patch-base_base__switches.h  patch-base_compiler__specific.h  patch-base_debug_debugger__posix.cc  patch-base_debug_elf__reader.cc  patch-base_debug_proc__maps__linux.cc  patch-base_debug_stack__trace.cc  patch-base_debug_stack__trace__posix.cc  patch-base_features.cc  patch-base_files_dir__reader__linux.h  patch-base_files_dir__reader__posix.h  patch-base_files_file__path__watcher.h  (+1447 more)
pkgsrc/megacmd/: MESSAGE  Makefile  PLIST  distinfo
source/cve-check-tool/: PKGBUILD
source/linux-armv7-lts/: PKGBUILD  config
source/mantisbt/: PKGBUILD
source/mega-sdk/: PKGBUILD
source/network-ups-tools/: PKGBUILD
source/plex-media-server/: PKGBUILD
source/uboot-opipc/: 0001-sunxi-h3-Fix-PLL1-setup-to-never-use-dividers.patch  PKGBUILD
tools/: aur-versions.sh  makepkg-versions.sh  pkgsrc-versions.sh  version.sh
uboot-opipc/: 0002-sunxi-Add-clocks-for-DE2-HDMI-TCON.patch  0003-sunxi-video-Add-video-driver-for-H3-SoC.patch  0004-sunxi-Enable-H3-video-driver-in-defconfigs.patch  PKGBUILD  boot.scr
(+28 files in other folders)
