$NetBSD$

* Part of patchset to build on NetBSD

--- base/allocator/partition_allocator/src/partition_alloc/BUILD.gn.orig	2024-03-06 00:14:36.837621000 +0000
+++ base/allocator/partition_allocator/src/partition_alloc/BUILD.gn
@@ -852,7 +852,7 @@ if (is_clang_or_gcc) {
         configs -= [ "//build/config/compiler:enable_arc" ]
       }
     }
-    if (is_chromeos || is_linux) {
+    if ((is_chromeos || is_linux) && !is_bsd) {
       shim_headers += [
         "shim/allocator_shim_override_cpp_symbols.h",
         "shim/allocator_shim_override_glibc_weak_symbols.h",
