$NetBSD$

* Part of patchset to build chromium on NetBSD
* Based on OpenBSD's chromium patches, and
  pkgsrc's qt5-qtwebengine patches

--- base/allocator/partition_allocator/src/partition_alloc/BUILD.gn.orig	2024-06-13 23:28:43.278639600 +0000
+++ base/allocator/partition_allocator/src/partition_alloc/BUILD.gn
@@ -884,7 +884,7 @@ if (is_clang_or_gcc) {
         configs -= [ "//build/config/compiler:enable_arc" ]
       }
     }
-    if (is_chromeos || is_linux) {
+    if ((is_chromeos || is_linux) && !is_bsd) {
       shim_headers += [
         "shim/allocator_shim_override_cpp_symbols.h",
         "shim/allocator_shim_override_glibc_weak_symbols.h",
