$NetBSD$

--- build/config/BUILD.gn.orig	2024-03-06 00:14:37.249656700 +0000
+++ build/config/BUILD.gn
@@ -214,6 +214,10 @@ config("default_libs") {
     # Targets should choose to explicitly link frameworks they require. Since
     # linking can have run-time side effects, nothing should be listed here.
     libs = []
+  } else if (is_bsd) {
+    libs = [
+      "pthread",
+    ]
   } else if (is_linux || is_chromeos) {
     libs = [
       "dl",
