$NetBSD$

* Part of patchset to build on NetBSD

--- build/config/clang/BUILD.gn.orig	2024-03-19 22:14:27.409556200 +0000
+++ build/config/clang/BUILD.gn
@@ -194,7 +194,7 @@ template("clang_lib") {
 
 # Adds a dependency on the Clang runtime library clang_rt.builtins.
 clang_lib("compiler_builtins") {
-  if (!toolchain_has_rust) {
+  if (!toolchain_has_rust || is_bsd) {
     # Since there's no Rust in the toolchain, there's no concern that we'll use
     # the Rust stdlib's intrinsics here.
     #
