$NetBSD$

* Part of patchset to build on NetBSD

--- build/config/ozone.gni.orig	2024-03-19 22:14:27.421557200 +0000
+++ build/config/ozone.gni
@@ -84,7 +84,19 @@ declare_args() {
     } else if (is_chromeos_lacros) {
       ozone_platform = "wayland"
       ozone_platform_wayland = true
-    } else if (is_linux) {
+    } else if (is_linux && !is_bsd) {
+      ozone_platform = "x11"
+      ozone_platform_wayland = true
+      ozone_platform_x11 = true
+    } else if (is_openbsd) {
+      ozone_platform = "x11"
+      ozone_platform_wayland = false
+      ozone_platform_x11 = true
+    } else if (is_netbsd) {
+      ozone_platform = "x11"
+      ozone_platform_wayland = false
+      ozone_platform_x11 = true
+    } else if (is_freebsd) {
       ozone_platform = "x11"
       ozone_platform_wayland = true
       ozone_platform_x11 = true
