$NetBSD$

* Part of patchset to build on NetBSD
* Based on OpenBSD's chromium patches

--- build/config/rust.gni.orig	2024-04-30 23:46:41.218107700 +0000
+++ build/config/rust.gni
@@ -277,6 +277,10 @@ if (is_linux || is_chromeos) {
   }
 }
 
+if (is_bsd) {
+  rust_abi_target = string_replace(rust_abi_target, "linux-gnu", current_os)
+}
+
 assert(!toolchain_has_rust || rust_abi_target != "")
 
 # This variable is passed to the Rust libstd build.
