$NetBSD$

--- build/linux/unbundle/libevent.gn.orig	2024-03-06 00:14:37.293660600 +0000
+++ build/linux/unbundle/libevent.gn
@@ -9,7 +9,12 @@ shim_headers("libevent_shim") {
   headers = [ "event.h" ]
 }
 
+config("system_libevent") {
+  defines = [ "USE_SYSTEM_LIBEVENT=1" ]
+}
+
 source_set("libevent") {
   deps = [ ":libevent_shim" ]
   libs = [ "event" ]
+  public_configs = [ ":system_libevent" ]
 }
