$NetBSD$

* Part of patchset to build on NetBSD
* Based on OpenBSD's chromium patches

--- build/linux/unbundle/libevent.gn.orig	2024-04-15 20:33:43.017041400 +0000
+++ build/linux/unbundle/libevent.gn
@@ -9,7 +9,12 @@ shim_headers("libevent_shim") {
   headers = [ "event.h" ]
 }
 
+config("system_libevent") {
+  defines = [ "USE_SYSTEM_LIBEVENT=1" ]
+}
+
 source_set("libevent") {
   deps = [ ":libevent_shim" ]
   libs = [ "event" ]
+  public_configs = [ ":system_libevent" ]
 }
