$NetBSD$

* Part of patchset to build on NetBSD
* Based on OpenBSD's chromium patches

--- build/linux/unbundle/libwebp.gn.orig	2024-05-09 21:46:26.081222000 +0000
+++ build/linux/unbundle/libwebp.gn
@@ -22,6 +22,8 @@ shim_headers("libwebp_shim") {
     "webp/mux.h",
     "webp/mux_types.h",
     "webp/types.h",
+    "webp/sharpyuv/sharpyuv.h",
+    "webp/sharpyuv/sharpyuv_csp.h",
   ]
 }
 
@@ -30,6 +32,14 @@ source_set("libwebp_webp") {
   public_configs = [ ":system_libwebp" ]
 }
 
+source_set("libwebp_sharpyuv") {
+  deps = [ ":libwebp_shim" ]
+  public_configs = [ ":system_libwebp" ]
+}
+
 group("libwebp") {
-  deps = [ ":libwebp_webp" ]
+  deps = [
+    ":libwebp_webp",
+    ":libwebp_sharpyuv",
+  ]
 }
