$NetBSD$

* Part of patchset to build on NetBSD
* Based on OpenBSD's chromium patches

--- build/toolchain/toolchain.gni.orig	2024-05-09 21:46:26.097223000 +0000
+++ build/toolchain/toolchain.gni
@@ -68,7 +68,7 @@ if (host_os == "mac") {
   host_shlib_extension = ".dylib"
 } else if (host_os == "win") {
   host_shlib_extension = ".dll"
-} else if (host_os == "linux" || host_os == "aix") {
+} else if (is_posix) {
   host_shlib_extension = ".so"
 } else {
   assert(false, "Host platform not supported")
