$NetBSD$

* Part of patchset to build on NetBSD
* Based on OpenBSD's chromium patches

--- chrome/browser/BUILD.gn.orig	2024-05-09 21:46:34.225760000 +0000
+++ chrome/browser/BUILD.gn
@@ -6554,6 +6554,13 @@ static_library("browser") {
     }
   }
 
+  if (is_bsd) {
+    sources -= [
+      "metrics/bluetooth_metrics_provider.cc",
+      "metrics/bluetooth_metrics_provider.h",
+    ]
+  }
+
   if (is_linux && use_dbus) {
     sources += [
       "dbus_memory_pressure_evaluator_linux.cc",
