$NetBSD$

* Part of patchset to build chromium on NetBSD
* Based on OpenBSD's chromium patches, and
  pkgsrc's qt5-qtwebengine patches

--- chrome/browser/BUILD.gn.orig	2024-06-13 23:28:46.266908000 +0000
+++ chrome/browser/BUILD.gn
@@ -6708,6 +6708,13 @@ static_library("browser") {
     }
   }
 
+  if (is_bsd) {
+    sources -= [
+      "metrics/bluetooth_metrics_provider.cc",
+      "metrics/bluetooth_metrics_provider.h",
+    ]
+  }
+
   if (is_linux && use_dbus) {
     sources += [
       "dbus_memory_pressure_evaluator_linux.cc",
