$NetBSD$

* Part of patchset to build on NetBSD
* Based on OpenBSD's chromium patches

--- chrome/browser/extensions/BUILD.gn.orig	2024-04-30 23:46:45.582579000 +0000
+++ chrome/browser/extensions/BUILD.gn
@@ -1384,6 +1384,10 @@ static_library("extensions") {
     deps += [ "//chrome/services/printing/public/mojom" ]
   }
 
+  if (is_bsd) {
+    sources -= [ "api/image_writer_private/removable_storage_provider_linux.cc" ]
+  }
+
   if (enable_service_discovery) {
     sources += [
       "api/mdns/mdns_api.cc",
