$NetBSD$

* Part of patchset to build on NetBSD
* Based on OpenBSD's chromium patches

--- chrome/browser/media/router/discovery/BUILD.gn.orig	2024-05-09 21:46:36.277895500 +0000
+++ chrome/browser/media/router/discovery/BUILD.gn
@@ -81,7 +81,7 @@ static_library("discovery") {
   ]
   configs += [ "//build/config/compiler:wexit_time_destructors" ]
 
-  if (is_linux || is_chromeos) {
+  if ((is_linux || is_chromeos) && !is_bsd) {
     sources += [ "discovery_network_list_wifi_linux.cc" ]
   }
 
