$NetBSD$

* Part of patchset to build on NetBSD

--- chrome/test/BUILD.gn.orig	2024-03-06 00:14:44.254264800 +0000
+++ chrome/test/BUILD.gn
@@ -11604,7 +11604,7 @@ test("chrome_app_unittests") {
     "//components/heap_profiling/in_process",
     "//components/safe_browsing:buildflags",
   ]
-  if (!is_fuchsia && !is_mac) {
+  if (!is_fuchsia && !is_mac && !is_bsd) {
     deps += [ "//third_party/breakpad:client" ]
   }
   if (is_android) {
