$NetBSD$

* Part of patchset to build on NetBSD
* Based on OpenBSD's chromium patches

--- components/crash/core/common/BUILD.gn.orig	2024-03-26 21:36:52.669302000 +0000
+++ components/crash/core/common/BUILD.gn
@@ -9,7 +9,7 @@ import("//components/gwp_asan/buildflags
 
 declare_args() {
   # If set to true, this will stub out and disable the entire crash key system.
-  use_crash_key_stubs = is_fuchsia
+  use_crash_key_stubs = is_fuchsia || is_bsd
 }
 
 group("common") {
