$NetBSD$

* Part of patchset to build on NetBSD
* Based on OpenBSD's chromium patches

--- content/browser/BUILD.gn.orig	2024-05-09 21:46:49.582774200 +0000
+++ content/browser/BUILD.gn
@@ -2406,6 +2406,13 @@ source_set("browser") {
     deps += [ "//media/mojo/mojom/stable:stable_video_decoder" ]
   }
 
+  if (is_bsd) {
+    sources -= [
+      "sandbox_ipc_linux.cc",
+      "sandbox_ipc_linux.h",
+    ]
+  }
+
   if (is_chromeos) {
     sources += [
       "handwriting/handwriting_recognition_service_impl_cros.cc",
