$NetBSD$

* Part of patchset to build chromium on NetBSD
* Based on OpenBSD's chromium patches, and
  pkgsrc's qt5-qtwebengine patches

--- content/browser/BUILD.gn.orig	2024-06-13 23:28:57.931955000 +0000
+++ content/browser/BUILD.gn
@@ -2408,6 +2408,13 @@ source_set("browser") {
     deps += [ "//media/mojo/mojom/stable:stable_video_decoder" ]
   }
 
+  if (is_bsd) {
+    sources -= [
+      "sandbox_ipc_linux.cc",
+      "sandbox_ipc_linux.h",
+    ]
+  }
+
   if (is_chromeos) {
     sources += [
       "handwriting/handwriting_recognition_service_impl_cros.cc",
