$NetBSD$

* Part of patchset to build on NetBSD

--- content/child/BUILD.gn.orig	2024-03-19 22:14:43.302974200 +0000
+++ content/child/BUILD.gn
@@ -131,6 +131,13 @@ target(link_target_type, "child") {
     ]
   }
 
+  if (is_bsd) {
+    sources -= [
+      "sandboxed_process_thread_type_handler.cc",
+      "sandboxed_process_thread_type_handler.h",
+    ]
+  }
+
   if (is_win) {
     sources += [
       "dwrite_font_proxy/dwrite_font_proxy_init_impl_win.cc",
