$NetBSD$

* Part of patchset to build on NetBSD

--- content/public/common/zygote/features.gni.orig	2024-03-06 00:14:51.298876300 +0000
+++ content/public/common/zygote/features.gni
@@ -2,4 +2,4 @@
 # Use of this source code is governed by a BSD-style license that can be
 # found in the LICENSE file.
 
-use_zygote = is_posix && !is_android && !is_apple
+use_zygote = is_posix && !is_android && !is_mac && !is_bsd
