$NetBSD$

* Part of patchset to build on NetBSD
* Based on OpenBSD's chromium patches

--- content/test/BUILD.gn.orig	2024-04-10 21:24:52.653277900 +0000
+++ content/test/BUILD.gn
@@ -2278,7 +2278,7 @@ static_library("run_all_unittests") {
     ":test_support",
     "//base/test:test_support",
   ]
-  if (is_linux || is_chromeos) {
+  if ((is_linux || is_chromeos) && !is_bsd) {
     deps += [ "//content/common:set_process_title_linux" ]
   }
 }
@@ -3388,7 +3388,7 @@ test("content_unittests") {
     deps += [ "//third_party/boringssl" ]
   }
 
-  if (is_linux || is_chromeos) {
+  if ((is_linux || is_chromeos) && !is_bsd) {
     sources += [ "../common/set_process_title_linux_unittest.cc" ]
     deps += [ "//content/common:set_process_title_linux" ]
   }
