$NetBSD$

* Part of patchset to build on NetBSD

--- content/zygote/BUILD.gn.orig	2024-03-19 22:14:44.399072000 +0000
+++ content/zygote/BUILD.gn
@@ -5,7 +5,7 @@
 import("//build/config/nacl/config.gni")
 import("//content/public/common/zygote/features.gni")
 
-if (is_linux || is_chromeos) {
+if ((is_linux || is_chromeos) && !is_bsd) {
   source_set("zygote") {
     sources = [
       "zygote_linux.cc",
