$NetBSD$

* Part of patchset to build on NetBSD
* Based on OpenBSD's chromium patches

--- device/bluetooth/cast_bluetooth.gni.orig	2024-03-26 21:36:59.913961600 +0000
+++ device/bluetooth/cast_bluetooth.gni
@@ -2,5 +2,5 @@ import("//build/config/features.gni")
 
 declare_args() {
   force_cast_bluetooth = false
-  use_bluez = (is_linux && !is_castos && use_dbus) || is_chromeos
+  use_bluez = use_dbus && !is_bsd
 }
