$NetBSD$

* Part of patchset to build on NetBSD

--- device/gamepad/BUILD.gn.orig	2024-03-19 22:14:44.583088400 +0000
+++ device/gamepad/BUILD.gn
@@ -99,7 +99,7 @@ component("gamepad") {
       "hid_writer_linux.cc",
       "hid_writer_linux.h",
     ]
-    if (use_udev) {
+    if (use_udev && !is_bsd) {
       sources += [
         "gamepad_device_linux.cc",
         "gamepad_device_linux.h",
