$NetBSD$

* Part of patchset to build on NetBSD
* Based on OpenBSD's chromium patches

--- device/gamepad/BUILD.gn.orig	2024-04-15 20:33:58.730195500 +0000
+++ device/gamepad/BUILD.gn
@@ -99,7 +99,7 @@ component("gamepad") {
       "hid_writer_linux.cc",
       "hid_writer_linux.h",
     ]
-    if (use_udev) {
+    if (use_udev && !is_bsd) {
       sources += [
         "gamepad_device_linux.cc",
         "gamepad_device_linux.h",
