$NetBSD$

* Part of patchset to build on NetBSD

--- media/cdm/library_cdm/cdm_paths.gni.orig	2024-03-06 00:14:54.911190000 +0000
+++ media/cdm/library_cdm/cdm_paths.gni
@@ -15,7 +15,7 @@ assert(enable_library_cdms)
 # Explicitly define what we use to avoid confusion.
 if (is_chromeos) {
   component_os = "cros"
-} else if (is_linux) {
+} else if (is_linux || is_bsd) {
   component_os = "linux"
 } else if (is_win) {
   component_os = "win"
